Stack-trace works (still struggling with gdb+breakpoints)

--- a/bochs.cfg
+++ b/bochs.cfg
@@ -45,3 +45,5 @@ keyboard_mapping: enabled=0, map=
 keyboard_type: mf
 user_shortcut: keys=none
 # no cmosimage
+#gdbstub: enabled=1, port=1234, text_base=0, data_base=0, bss_base=0
+#debug_symbols: file=build/kernel.bin
