--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -6,10 +6,9 @@ BINNAME=kernel.bin
 BIN=$(BUILD)/$(BINNAME)
 LDCONF=src/ld.conf
 OSTITLE=hrniels-OS
-DUMP=$(BUILD)/kernel.dump
 
 CC = gcc
-CFLAGS = -g -O2 -fno-inline -ffreestanding -Wall -ansi -nostdlib -nostartfiles -nodefaultlibs
+CFLAGS = -g -fno-inline -ffreestanding -Wall -ansi -nostdlib -nostartfiles -nodefaultlibs
 
 # sources
 ASRC=src/kernel.asm
@@ -21,15 +20,35 @@ AOBJ=$(BUILD)/kernel_asm.o
 AOBJEND=$(BUILD)/end.o
 COBJ=$(patsubst src/%.c,$(BUILD)/%.o,$(CSRC))
 
-.PHONY: all clean
+SYMBOLS=$(BUILD)/ksymbols.txt
+SYMBOLSRC=src/ksymbols.c
 
-all:	$(BIN)
+.PHONY: all pre clean
+
+all:	pre $(BIN)
+
+# ensure that the symbols exist
+pre:
+		if [ ! -f $(SYMBOLS) ]; then echo "" > $(SYMBOLS); fi
 
 $(BIN):	$(LDCONF) $(AOBJ) $(COBJ)
 		@echo "===== LINKING =====";
 		ld -T $(LDCONF) -o $(BIN) $(AOBJ) $(COBJ) $(AOBJEND);
-		@echo "===== GENERATING OBJECT DUMP =====";
-		objdump -l -d $(BIN) > $(DUMP);
+		@# Note that we link 2 additional times because otherwise the symbol-table is incorrect
+		@# since it's size is 0 at the first time. In the second part the size is correct
+		@# and therefore the symbol-table will be generated correctly :)
+		@echo "===== BUILDING SYMBOL-FILE =====";
+		../tools/gensymbols.sh $(BIN) > $(SYMBOLS)
+		@echo "===== COMPILING SYMBOL-C-FILE =====";
+		$(CC) $(CFLAGS) -o $(patsubst src/%.c,$(BUILD)/%.o,$(SYMBOLSRC)) -c $(SYMBOLSRC)
+		@echo "===== LINKING AGAIN =====";
+		ld -T $(LDCONF) -o $(BIN) $(AOBJ) $(COBJ) $(AOBJEND);
+		@echo "===== BUILDING SYMBOL-FILE =====";
+		../tools/gensymbols.sh $(BIN) > $(SYMBOLS)
+		@echo "===== COMPILING SYMBOL-C-FILE =====";
+		$(CC) $(CFLAGS) -o $(patsubst src/%.c,$(BUILD)/%.o,$(SYMBOLSRC)) -c $(SYMBOLSRC)
+		@echo "===== LINKING AGAIN =====";
+		ld -T $(LDCONF) -o $(BIN) $(AOBJ) $(COBJ) $(AOBJEND);
 		@echo "===== COPYING BINARY =====";
 		sudo mount -o loop $(DISK) $(DISKMOUNT);
 		cp $(BIN) $(DISKMOUNT);
@@ -37,8 +56,8 @@ $(BIN):	$(LDCONF) $(AOBJ) $(COBJ)
 
 $(AOBJ):	$(ASRC) $(ASRCEND)
 		@echo "===== ASSEMBLING =====";
-		nasm -f elf -o $(AOBJ) $(ASRC);
-		nasm -f elf -o $(AOBJEND) $(ASRCEND);
+		nasm -g -f elf -o $(AOBJ) $(ASRC);
+		nasm -g -f elf -o $(AOBJEND) $(ASRCEND);
 
 $(BUILD)/%.o:		src/%.c
 		@echo "===== COMPILING $< =====";
@@ -54,4 +73,5 @@ $(BUILD)/depend.mak:	$(CSRC)
 
 clean:
 		@echo "===== REMOVING FILES =====";
-		rm -f $(DUMP) $(BUILD)/depend.mak $(BUILD)/*.o $(BIN) $(COBJ) $(AOBJ);
+		rm -f $(BUILD)/depend.mak $(BUILD)/*.o $(BIN) $(COBJ) $(AOBJ) \
+			$(BUILD)/tools_gensymbols.c $(BUILD)/tools_gensymbols.o;
