Context-switching (not mode) works =)

--- a/bochs.cfg
+++ b/bochs.cfg
@@ -33,7 +33,7 @@ clock: sync=none, time0=local
 ne2k: enabled=0
 pnic: enabled=0
 # no loader
-#log: log.txt
+log: log.txt
 logprefix: %t%e%d
 debugger_log: debug.txt
 panic: action=fatal
