Moved the video-stuff to the lib

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -7,7 +7,7 @@ CFLAGS = -g -nostdlib -nostartfiles -nodefaultlibs $(CWFLAGS) -I$(LIBDIR)/h
 CSRCS = $(wildcard src/*.c)
 TSRCS = $(wildcard test/*.c)
 ASRCS = $(wildcard src/*.s)
-LSRC=$(wildcard $(LIBDIR)/src/*.c)
+LSRC=$(filter-out $(LIBDIR)/src/video.c,$(wildcard $(LIBDIR)/src/*.c))
 OBJS = $(patsubst src/%.c,$(BUILD)/libc_%.o,$(CSRCS))
 OBJS += $(patsubst src/%.s,$(BUILD)/libc_a%.o,$(ASRCS))
 OBJS += $(patsubst test/%.c,$(BUILD)/libc_t%.o,$(TSRCS))
